Fixed broken CSS relating to the gravity forms confirmation

--- a/themes/dbc/style.dev.css
+++ b/themes/dbc/style.dev.css
@@ -348,7 +348,7 @@ pre code { font-size: 1em; }
         border: 1px solid #E6DB55;
         background-color: #FFFBCC;
         text-shadow: #FCFAEA 1px 1px;
-        color: #222
+        color: #222;
         padding: 20px;
 	}
 	
